# kvmswitcher

./: README.md  pyproject.toml
config/: settings.py  urls.py
kvmlist/: admin.py  apps.py  tests.py  urls.py  views.py
kvmlist/migrations/: 0001_initial.py  0002_rename_question_test_question_question_text.py
scripts/: server.py
templates/kvmlist/: detail.html  index.html  results.html
