[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["inahym196 <inahym196@example.com>"]
packages = [
    { include="scripts", from="."},
]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'scripts.server:main'

